--- a/legaci.html
+++ b/legaci.html
@@ -15,7 +15,6 @@
             }
             body{
                  background-color: aliceblue;
-                 font-family: 'Courier New', Courier, monospace;
             }
             .container{
                   width: 50%;
@@ -29,6 +28,7 @@
                   text-align: center;
                   text-transform: uppercase;
                   margin-bottom: 30px;
+                  text-decoration: underline;
             }
             b{
                   text-transform: uppercase;
