modified index for Joe and Kessi

--- a/index.html
+++ b/index.html
@@ -7,6 +7,9 @@
     <title>Welcome</title>
 </head>
 <body>
+    <!-- Joseph section -->
     <h1>Welcome to my nice website</h1>
+
+    <!-- Kessi Section -->
 </body>
 </html>
