--- a/index.html
+++ b/index.html
@@ -23,7 +23,8 @@
             <li><a href=""></a>Features</li>
           </ul>
         </div>
-        
+        <p>This is from Joseph Anto</p>
+        <h3>Pretty interesting</h3>
         <div>
             <button>Login</button>
             <button>Register</button>
