--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
             <li><a href=""></a>Features</li>
           </ul>
         </div>
-        
+        <h2>causing more commotion</h2>
         <div>
             <button>Login</button>
             <button>Register</button>
