--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
         <p>This is from Joseph Anto</p>
         <h3>Pretty interesting</h3>
         <div>
-            <button>Login</button>
+            <button>logout</button>
             <button>Register</button>
         </div>
     </nav>
