--- a/nkay.html
+++ b/nkay.html
@@ -19,7 +19,7 @@
 			Emmanuel Asante is my name but friends usually refer to me as Nkay. I am a
 			graduate of KNUST in Kumasi. I aspire to be <em>a software engineer</em> .
 			<p>
-				Notwithstanding my ineptitude in terms of study in the CComputer
+				Notwithstanding my ineptitude in terms of study in the Computer
 				Sciences, I am poised to take up this challenge.
 			</p>
 		</article>
