This is a modified version

--- a/kessi.html
+++ b/kessi.html
@@ -16,7 +16,7 @@
       from unconb=ventional background. I made a committement to learn coding
       and here I am writing an html. hehehe.
     </p>
-    <p>Right now I am working on github and contributiong to a souce code.</p>
+    <p>Right now I am working on github and contributiong to a souce code. The first time I wrote a line of code was in college while pursuing my LLB degree. The excitement and fulfillment were undeniably what sparked my interest in computing and technologies. I had taken personal lessons with a colleague in the Computer Science program to learn html and I totally fell in love with the basic syntax and the <Hello, World> line so much that I desired to be a tech savvy. </p>
 
  
   </body>
